--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ http:
     doh:
       entryPoints:
         - "https"
-      rule: "Host(`dns.hostname.yourdomain.tld`) && PathPrefix(`/dns-query`)"
+#      rule: "Host(`dns.hostname.yourdomain.tld`) && PathPrefix(`/dns-query`)"#Edit hostname.yourdomain.tld
       middlewares:
         - default-headers
         - default-whitelist
@@ -12,7 +12,7 @@ http:
     technitium:
       entryPoints:
         - "https"
-      rule: "Host(`technitium.hostname.yourdomain.tld`)"
+#      rule: "Host(`technitium.hostname.yourdomain.tld`)"#Edit hostname.yourdomain.tld
       middlewares:
         - default-headers
         - technitium-whitelist
@@ -36,6 +36,7 @@ http:
     technitium-whitelist:
       ipWhiteList:
         sourceRange:
+#Adjust to restirct access to Technitium portal
           - 127.0.0.1/32
           - 10.0.0.0/8
           - 172.16.0.0/12
@@ -43,6 +44,7 @@ http:
     default-whitelist:
       ipWhiteList:
         sourceRange:
+#Adjust to restict access to DNS-over-HTTPS
           - 10.0.0.0/8
           - 172.16.0.0/12
           - 192.168.0.0/16
@@ -68,6 +70,7 @@ http:
 tcp:
   routers:
     dot:
+#Adjust if needed, i.e. for public deployment
       rule: "ClientIP(`10.0.0.0/8`) || ClientIP(`172.16.0.0/12`) || ClientIP(`192.168.0.0./16`)|| ClientIP(`127.0.0.0/8`)"
       entryPoints:
         - dot
@@ -79,10 +82,11 @@ tcp:
     dot-whitelist:
       ipWhiteList:
         sourceRange:
+#Adjust to restict access to DNS-over-TLS
           - "127.0.0.0/8"
           - "10.0.0.0/8"
           - "172.16.0.0/12"
-          - 192.168.0.0/16
+          - "192.168.0.0/16"
   services:
     sv-dot:
       loadBalancer:
