--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     networks:
       - proxy
     ports:
+      - "5380:5380/tcp"
       - "5380/tcp"
       - "53:53/udp"
       - "53:53/tcp"
