--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - "53:53/udp"
       - "53:53/tcp"
     environment:
-      - DNS_SERVER_DOMAIN=hostname.yourdomain.tld
+#      - DNS_SERVER_DOMAIN=hostname.yourdomain.tld#Edit hostname.yourdomain.tld
     volumes:
       - config:/etc/dns
     restart: unless-stopped
