--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,18 +26,22 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.traefik.entrypoints=http"
-#      - "traefik.http.routers.traefik.rule=Host(`traefik.hostname.yourdomain.tld`)"#Edit hostname.yourdomain.tld
+#Edit hostname.yourdomain.tld
+#      - "traefik.http.routers.traefik.rule=Host(`traefik.hostname.yourdomain.tld`)"
       - "traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIK_DASHBOARD_CREDENTIALS}"
       - "traefik.http.middlewares.traefik-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
       - "traefik.http.routers.traefik.middlewares=traefik-https-redirect"
       - "traefik.http.routers.traefik-secure.entrypoints=https"
-#      - "traefik.http.routers.traefik-secure.rule=Host(`traefik.hostname.yourdomain.tld`)"#Edit hostname.yourdomain.tld
+#Edit hostname.yourdomain.tld
+#      - "traefik.http.routers.traefik-secure.rule=Host(`traefik.hostname.yourdomain.tld`)
       - "traefik.http.routers.traefik-secure.middlewares=traefik-auth"
       - "traefik.http.routers.traefik-secure.tls=true"
       - "traefik.http.routers.traefik-secure.tls.certresolver=cloudflare"
-#      - "traefik.http.routers.traefik-secure.tls.domains[0].main=hostname.yourdomain.tld"#Edit hostname.yourdomain.tld
-#      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.hostname.yourdomain.tld"#Edit hostname.yourdomain.tld
+#Edit hostname.yourdomain.tld
+#      - "traefik.http.routers.traefik-secure.tls.domains[0].main=hostname.yourdomain.tld"
+#Edit hostname.yourdomain.tld
+#      - "traefik.http.routers.traefik-secure.tls.domains[0].sans=*.hostname.yourdomain.tld"
       - "traefik.http.routers.traefik-secure.service=api@internal"
   technitium:
     container_name: technitium
@@ -51,7 +55,8 @@ services:
       - "53:53/udp"
       - "53:53/tcp"
     environment:
-#      - DNS_SERVER_DOMAIN=hostname.yourdomain.tld#Edit hostname.yourdomain.tld
+#Edit hostname.yourdomain.tld
+#      - DNS_SERVER_DOMAIN=hostname.yourdomain.tld
     volumes:
       - config:/etc/dns
     restart: unless-stopped
