--- a/traffic.yml
+++ b/traffic.yml
@@ -19,7 +19,8 @@ providers:
 certificatesResolvers:
   cloudflare:
     acme:
-#      email: admin@yourdomain.tld#Edit email address
+#Edit email address
+#      email: admin@yourdomain.tld
       storage: acme.json
       caServer: https://acme-v02.api.letsencrypt.org/directory
       dnsChallenge:
