--- a/config.yml
+++ b/config.yml
@@ -96,22 +96,23 @@ tcp:
           - address: "technitium:538"
         proxyProtocol:
           version: 2
-x-intermediate-ciphersuite: &intermediate-ciphersuite-parameters
-  minVersion: VersionTLS12
-  sniStrict: true
-  cipherSuites:
-    - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
-    - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
-    - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
-    - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
-    - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
-    - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
-tls:
-  options:
-    default:
-      <<: *intermediate-ciphersuite-parameters
-    intermediate:
-      <<: *intermediate-ciphersuite-parameters
-    modern:
-      minVersion: VersionTLS13
-      sniStrict: true
+##Below doesn't seem to be needed
+#x-intermediate-ciphersuite: &intermediate-ciphersuite-parameters
+#  minVersion: VersionTLS12
+#  sniStrict: true
+#  cipherSuites:
+#    - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+#    - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+#    - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+#    - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+#    - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+#    - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
+#tls:
+#  options:
+#    default:
+#      <<: *intermediate-ciphersuite-parameters
+#    intermediate:
+#      <<: *intermediate-ciphersuite-parameters
+#    modern:
+#      minVersion: VersionTLS13
+#      sniStrict: true
